--- a/R/.gitignore
+++ b/R/.gitignore
@@ -3,3 +3,4 @@ Offshore_CPUE_analysis.docx
 temp.r
 Offshore_CPUE_analysis_v2018.docx
 offshore_data.RData
+Offshore fleet standardized CPUE 2017.csv
